# neuxdb

./: .editorconfig  .gitignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  a.md
.github/workflows/: build_and_test.yml
data/: users.ndbx
examples/: demo.rs  example.rs
src/: admin.rs  config.rs  crypto.rs  data.rs  database.rs  error.rs  executor.rs  export.rs  import.rs  lib.rs  log.rs  main.rs  manager.rs  parser.rs  storage.rs  syntax.rs  table.rs  types.rs
src/apis/: compiler.rs  mod.rs  service.rs  sintax.rs  storage.rs
src/cmd/: mod.rs  run.rs
src/cmd/config/: mod.rs
src/cmd/database/: backup.rs  create.rs  export.rs  import.rs  info.rs  mod.rs  restore.rs
src/cmd/global/: help.rs  info.rs  version.rs
src/cmd/job/: delete.rs  insert.rs  mod.rs  update.rs
src/cmd/table/: create.rs  drop.rs  list.rs  mod.rs  select.rs
src/config/: delimiter_byte.rs  delimiter_char.rs  ensure_data_dir.rs  global.rs  mod.rs  sanitize_table_name.rs  schema_path.rs  table_path.rs
src/core/: compiler.rs  mod.rs  service.rs  storage.rs  syntax.rs
src/core/compiler/: mod.rs  parse_create.rs  parse_delete.rs  parse_insert.rs  parse_select.rs  parse_update.rs  parser.rs  tokenizer.rs  unquote.rs
src/core/service/: create_table.rs  delete_rows.rs  display_rows.rs  drop_table.rs  insert_rows.rs  mod.rs  parse_assignment.rs  parse_condition.rs  run_script.rs  select_rows.rs  show_tables.rs  update_rows.rs
src/core/storage/: create_tabel_scema.rs  load_scema.rs  mod.rs  read_tabel.rs  read_table.rs  save_chema.rs  write_table.rs
src/core/syntax/: mod.rs  splite_quote.rs  statement.rs
src/lib/compiler/: mod.rs  parse.rs  parse_create.rs  parse_delete.rs  parse_insert.rs  parse_select.rs  parse_update.rs
src/lib/service/: create_table.rs  delete_rows.rs  execute_query.rs  insert_row.rs  mod.rs  parse_assignment.rs  parse_condition.rs  run_script.rs  select_rows.rs  update_rows.rs
src/lib/sintax/: mod.rs
src/lib/storage/: mod.rs  read_table.rs  write_table.rs
src/templates/: export_template.html
src/types/: cli.rs  commands.rs  mod.rs  row.rs  value.rs
tests/: integration_test.rs  integration_tests.rs
