[package]
name = "neuxdb"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "A super simple, embedded, encrypted database like SQLite, using pipe-separated files and age encryption."
authors = ["neuxdotdev <neuxdev1@gmail.com>"]
license = "MIT"
repository = "https://github.com/neuxdotdev/neuxdb"
homepage = "https://github.com/neuxdotdev/neuxdb"
documentation = "https://docs.rs/neuxdb"
readme = "README.md"
keywords = ["database", "embedded", "encryption", "age", "cli"]
categories = ["database", "command-line-utilities", "cryptography"]
exclude = [
    "/.github",
    "/.vscode",
    "/.idea",
    "/target",
    "/.git",
    "*.rs.bak",
    "Cargo.lock",
    "tests/fixtures/*.tmp",
    "bench/**/*",
    "example/**/*"
]
include = [
    "/src/**/*",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE*",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/SECURITY.md"
]
autolib = true

[lib]
name = "neuxdb"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"
unused = "warn"
deprecated = "warn"

[dependencies]
csv = "1.4.0"
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
