[package]
name = "neuxdb"
version = "0.3.0"
edition = "2021"
rust-version = "1.85.0"
description = "A super simple, embedded, encrypted database like SQLite, using pipe-separated files and age encryption."
authors = ["neuxdotdev <neuxdev1@gmail.com>"]
license = "MIT"
repository = "https://github.com/neuxdotdev/neuxdb"
homepage = "https://github.com/neuxdotdev/neuxdb"
documentation = "https://docs.rs/neuxdb"
readme = "README.md"
keywords = ["database", "embedded", "encryption", "age", "cli"]
categories = ["database", "command-line-utilities", "cryptography"]

exclude = [
    "/.github",
    "/.vscode",
    "/.idea",
    "/target",
    "/.git",
    "*.rs.bak",
    "Cargo.lock",
    "tests/fixtures/*.tmp",
    "bench/**/*",
    "example/**/*"
]

include = [
    "/src/**/*",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE*",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "CHANGELOG.md"
]
autolib = true

[lib]
name = "neuxdb"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_code = "warn"
unused = "warn"
deprecated = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
zeroize = "1"
age-setup = "0.2.1"
age-crypto = "0.2.0"
age = "0.11.3"
sha2 = "0.11.0"
fs2 = "0.4.3"
regex = "1.12.3"
tempfile = "3.27.0"
